upload meta facebook zalo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <meta name="keywords" content="valentine 2023" />
     <meta name="description" content="valentine project for couple" />
     <meta name="author" content="Lam Chi Thien" />
+    <!-- Meta for facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Valentine 2023" />
+    <meta property="og:url" content="https://valentine2023.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://valentine2023.vercel.app/img/background_valentine_fb.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Website give a gift valentine 2023 "
+    />
     <title>Valentine 2023</title>
     <link rel="stylesheet" href="index.css" />
     <link
@@ -19,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="favicon.ico" type="image/x-ico">
+    <link rel="icon" href="favicon.ico" type="image/x-ico" />
   </head>
   <body>
     <h1
